# realmate-challange

./: .env.example  .gitignore  Dockerfile  INSTRUCTIONS.md  docker-compose.yaml  init.sh  populate_async.py  pyproject.toml
frontend/: Dockerfile  angular.json  nginx.conf  package-lock.json  package.json
frontend/src/app/: app.config.ts  app.css  app.html  app.routes.ts  app.ts
frontend/src/app/components/confirm-modal/: confirm-modal.component.css  confirm-modal.component.html  confirm-modal.component.ts
frontend/src/app/components/contact-modal/: contact-modal.component.html  contact-modal.component.ts
frontend/src/app/components/contact-selector/: contact-selector.component.html  contact-selector.component.ts
frontend/src/app/guards/: auth.guard.ts
frontend/src/app/interceptors/: auth.interceptor.ts
frontend/src/app/models/: api-responses.model.ts  auth.model.ts  conversation.model.ts
frontend/src/app/services/: api.service.ts  auth.service.ts  contact.service.ts  toast.service.ts  websocket.service.ts
nginx/: nginx.conf
realmate_challenge/: asgi.py  celery.py  settings.py  urls.py
webhooks/: consumers.py  exceptions.py  messaging_service.py  models.py  routing.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py  websocket_service.py
webhooks/management/commands/: populate_db.py
webhooks/migrations/: 0001_initial.py  0002_contact_conversation_assigned_user_and_more.py  0003_message_is_internal.py  0004_alter_message_is_internal.py
webhooks/tests/: test_messaging.py  test_webhooks.py  test_websocket.py
(+19 files in other folders)
